Fix file icon width alignment issue

--- a/src/styles/components/file-icons.scss
+++ b/src/styles/components/file-icons.scss
@@ -5,7 +5,7 @@
   background-position: left center;
   background-repeat: no-repeat;
   padding-right: 6px;
-  width: 23px;
+  width: 23px !important;
   height: 22px;
   display: inline-block;
   -webkit-font-smoothing: antialiased;
